# PAPI-Detection-and-Classification

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
Backend_main/: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  requirements.txt
Frontend/: README.md  package.json
apps/: README.md
backend/: .env.example  Dockerfile  PLAN.md  README.md  requirements.txt
configs/: papi_edny.yaml  projection.yaml  split.yaml
data/: README.md  best_int8.onnx  data_analysis.ipynb  data_augmentation.ipynb  model_performance.ipynb  model_training_optimization.ipynb
docs/: architecture-overview.md  audit-fix-verification-2026-05-28.md  edge-benchmark.md  installation-manual.md  label_spec.md  pipeline.md  user-manual.md  user-testing-papi-vision-2026-05-28.md  user-testing-papi-vision-rerun-2026-05-28.md
frontend/: README.md  package-lock.json
models/: MODELS.md  README.md
notebooks/: 01_pipeline_walkthrough.ipynb  02_active_learning_preprocessing_template.ipynb  03_yolov26n_detection_tracking_training.ipynb  04_yolov26n_sequence_model_evaluation.ipynb
scripts/: build-deliverables.ps1  build_cvat_normal_batches.py  build_cvat_normal_image_batches.py  build_sequence_tracking.py  export_yolo_assisted_cvat.py  pipeline.py  prepare_yolo_seed.py  prepare_yolo_sequence_dataset.py
src/: App.css  App.jsx  index.css
test_videos/: README.md
tests/: conftest.py  test_cvat_export.py  test_lamp_state.py  test_projection.py  test_sequence_tracking_artifacts.py  test_visual_lamp.py
workflows/: README.md
(+136 files in other folders)
